add mobile response, color fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,14 +9,14 @@ p{
     .axis2 path,
     .axis2 line{
       fill: none;
-        stroke: #373E43;
+        stroke: #2F1501;
         shape-rendering: crispEdges;
         }
     .axis text,
     .axis2 text {
         font-family:  SourceSansPro-Bold;
         font-size: 14px;
-        fill: #373E43;
+        fill: #2F1501;
         }
 
     .x.axis path {
@@ -43,19 +43,19 @@ p{
       margin-left: 20px;
       font-family: SourceSansPro-Light;
       font-size: 13pt;
-      fill: #121516;
+      color: #2F1501;
 
     }
     .menuchoice {
         font-family: SourceSansPro-Bold;
         font-size: 25pt;
         margin-bottom:0px;
-        fill: #231F20;
         margin-right: 3pt;
         border: none;
         -moz-appearance:none; /* Firefox */
         -webkit-appearance:none; /* Safari and Chrome */
         appearance:none;
+        color: #2F1501;
     }
     .menuchoice option{
       font-family: SourceSansPro-Light;
@@ -67,7 +67,7 @@ p{
         font-family: SourceSansPro-Light;
         font-size: 10pt;
         margin-bottom:0px;
-        fill: #121516;
+        color: #2F1501;
         }
     .logo{
       width: 140px;
@@ -79,41 +79,20 @@ p{
       font-family: SourceSansPro-Light;
       font-size: 14px;
       margin-bottom:0px;
-      fill: #24292D;
+      color: #2F1501;
           }
     .legend-off {
         font-family: SourceSansPro-Light;
         font-size: 10pt;
         margin-bottom:0px;
-        fill: #24292D;
+        color: #2F1501;
         }
     .legend-select {
         font-family: SourceSansPro-Bold;
         font-size: 10pt;
         margin-bottom:0px;
-        fill: #24292D;
+        color: #2F1501;
         }
-    .tip1 {
-        font-family: SourceSansPro-Bold;
-        font-size: 14pt;
-        text-align: center;
-        margin-bottom:-12px;
-        margin-top:0px;
-        }
-
-    .tip2 {
-        font-family: SourceSansPro-ExtraLight;
-        font-size: 10pt;
-        text-align: center;
-        margin-bottom:-12px;
-        }
-    .tip3 {
-        font-family: SourceSansPro-ExtraLight;
-        font-size: 10pt;
-        text-align: center;
-        margin-bottom:0px;
-        }
-
     @font-face {
       font-family: 'SourceSansPro-ExtraLight';
       font-style: normal;
@@ -132,34 +111,3 @@ p{
       font-weight: 700;
       src: url(//themes.googleusercontent.com/static/fonts/sourcesanspro/v5/toadOcfmlt9b38dHJxOBGIqjGYJUyOXcBwUQbRaNH6c.woff) format('woff');
     }
-
-    .tipsy { font-family:"Source Sans Pro"; font-size: 10px; position: absolute; padding: 5px; z-index: 100000; }
-      .tipsy-inner { background-color: #000; color: #FFF; max-width: 200px; padding: 0; text-align: left; padding:10px;}
-      /* Rounded corners */
-      .tipsy-inner { border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
-
-      /* Uncomment for shadow */
-      /*.tipsy-inner { box-shadow: 0 0 5px #000000; -webkit-box-shadow: 0 0 5px #000000; -moz-box-shadow: 0 0 5px #000000; }*/
-
-      .tipsy-arrow { position: absolute; width: 0; height: 0; line-height: 0; border: 5px dashed #000; }
-
-      /* Rules to colour arrows */
-      .tipsy-arrow-n { border-bottom-color: #000; }
-      .tipsy-arrow-s { border-top-color: #000; }
-      .tipsy-arrow-e { border-left-color: #FFF; }
-      .tipsy-arrow-w { border-right-color: #000; }
-
-        .tipsy-n .tipsy-arrow { top: 0px; left: 50%; margin-left: -5px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent; }
-        .tipsy-nw .tipsy-arrow { top: 0; left: 10px; border-bottom-style: solid; border-top: none; border-left-color: transparent; border-right-color: transparent;}
-        .tipsy-ne .tipsy-arrow { top: 0; right: 10px; border-bottom-style: solid; border-top: none;  border-left-color: transparent; border-right-color: transparent;}
-      .tipsy-s .tipsy-arrow { bottom: 0; left: 50%; margin-left: -5px; border-top-style: solid; border-bottom: none;  border-left-color: transparent; border-right-color: transparent; }
-        .tipsy-sw .tipsy-arrow { bottom: 0; left: 10px; border-top-style: solid; border-bottom: none;  border-left-color: transparent; border-right-color: transparent; }
-        .tipsy-se .tipsy-arrow { bottom: 0; right: 10px; border-top-style: solid; border-bottom: none; border-left-color: transparent; border-right-color: transparent; }
-      .tipsy-e .tipsy-arrow { right: 0; top: 50%; margin-top: -5px; border-left-style: solid; border-right: none; border-top-color: transparent; border-bottom-color: transparent; }
-      .tipsy-w .tipsy-arrow { left: 0; top: 50%; margin-top: -5px; border-right-style: solid; border-left: none; border-top-color: transparent; border-bottom-color: transparent; }
-
-
-    .gravity { width: 100%; margin: 5px 0; border-spacing: 5px; }
-      .gravity td { text-align: center; vertical-align: middle; padding: 5px 0; background-color: #d0d0d0; width: 33%; }
-      .gravity a { }
-        .gravity a:hover { color: #505050; background: none; }
