--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,9 @@ p{
         margin-bottom:0px;
         color: #2F1501;
         }
+    .legendcountry {
+      font-family: SourceSansPro-Bold;
+    }
     .logo{
       width: 140px;
 
